# uv_aliyun_mirror

./: .gitignore
.github/workflows/: sync_fc.yml  sync_oss.yml
fc_server/: Cargo.toml
fc_server/src/: main.rs
python_scripts/: aliyun_utils.py  pyproject.toml  sync_fc.py  sync_oss.py  sync_python.py  sync_uv.py
