[project]
name = "python_scripts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-tea-openapi>=0.3.15",
    "oss2>=2.19.1",
    "requests>=2.32.3",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
